src/corelib/itemmodels/qsortfilterproxymodel.h
@@ -113,6 +113,7 @@ protected:
     virtual bool filterAcceptsColumn(int source_column, const QModelIndex &source_parent) const;
     virtual bool lessThan(const QModelIndex &source_left, const QModelIndex &source_right) const;
 
+    void beginFilterChange();
     void invalidateFilter();
     void invalidateRowsFilter();
     void invalidateColumnsFilter();
