tests/auto/corelib/itemmodels/qsortfilterproxymodel/tst_qsortfilterproxymodel.cpp
@@ -5497,5 +5497,64 @@ void tst_QSortFilterProxyModel::createPersistentOnLayoutAboutToBeChanged() // QT
     QCOMPARE(layoutChangedSpy.size(), 1);
 }
 
+void tst_QSortFilterProxyModel::filterChangeEmitsModelChangedSignals()
+{
+    QStringListModel model({"1", "2", "3", "4", "5"});
+
+    class FilterModel : public QSortFilterProxyModel
+    {
+        QString m_matchString;
+    public:
+        void setFilter(const QString &s)
+        {
+            if (m_matchString == s)
+                return;
+
+            beginFilterChange();
+            m_matchString = s;
+            invalidateFilter();
+        }
+
+        bool filterAcceptsRow(int sourceRow, const QModelIndex &sourceParent) const override
+        {
+            const auto index = sourceModel()->index(sourceRow, 0, sourceParent);
+            if (!index.isValid())
+                return false;
+
+            return index.data().value<QString>() == m_matchString;
+        }
+    };
+
+    FilterModel filterModel;
+
+     // Reject all source data at the start
+    filterModel.setFilter("X");
+     // Trigger an evaluation
+    filterModel.sort(0, Qt::AscendingOrder);
+    filterModel.setSourceModel(&model);
+    QCOMPARE(filterModel.rowCount(), 0);
+    filterModel.invalidate();
+
+    QSignalSpy rowsInsertedSpy(&filterModel, &QSortFilterProxyModel::rowsInserted);
+    QSignalSpy rowsRemovedSpy(&filterModel, &QSortFilterProxyModel::rowsRemoved);
+
+    filterModel.setFilter("3");
+    QCOMPARE(filterModel.rowCount(), 1);
+    QCOMPARE(rowsInsertedSpy.count(), 1);
+    rowsInsertedSpy.clear();
+
+    filterModel.setFilter("2");
+    QCOMPARE(filterModel.rowCount(), 1);
+    QCOMPARE(rowsInsertedSpy.count(), 1);
+    QCOMPARE(rowsRemovedSpy.count(), 1);
+    rowsInsertedSpy.clear();
+    rowsRemovedSpy.clear();
+
+    filterModel.setFilter("X");
+    QCOMPARE(filterModel.rowCount(), 0);
+    QCOMPARE(rowsInsertedSpy.count(), 0);
+    QCOMPARE(rowsRemovedSpy.count(), 1);
+}
+
 QTEST_MAIN(tst_QSortFilterProxyModel)
 #include "tst_qsortfilterproxymodel.moc"
